--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ h1 {
 }
 @media (max-width:760px) {
     .main {
-        background: url(img/Jummy2.jpg);
+        background: url(img/Jummy2.jpg)no-repeat;
         background-size: cover;
         height: 100vh;
         width: 100%;
