--- a/style.css
+++ b/style.css
@@ -134,6 +134,11 @@ h1 {
     padding-right: 5px;
 }
 @media (max-width:760px) {
+    * {
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+    }
     .main {
         background: url(img/Jummy2.jpg)no-repeat;
         background-size: cover;
