--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@
     background: url(img/Jummy3.jpg)no-repeat;
     background-size: cover;
     height: 100vh;
-    
     width: 100%;
 }
 .main h1 {
@@ -138,6 +137,7 @@ h1 {
         box-sizing: border-box;
         padding: 0;
         margin: 0;
+        width: 100;
     }
     .main {
         background: url(img/Jummy2.jpg)no-repeat;
