--- a/style.css
+++ b/style.css
@@ -143,7 +143,8 @@ h1 {
         background: url(img/Jummy2.jpg)no-repeat;
         background-size: cover;
         height: 100vh;
-        width: 100%;
+        margin: auto;
+        width: 50%;
     }
     .anji {
         display: none;
